--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -10,13 +10,18 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
-
+  test:
+    name: Test
     runs-on: macos-12
-
+    strategy:
+        matrix:
+          destination: ['platform=iOS Simulator,OS=16.2,name=iPhone 14']
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Build and test
+        run: |
+          cd TDD
+          xcodebuild clean test -workspace TDD.xcworkspace -scheme TDD -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
+        env: 
+         destination: ${{ matrix.destination }}
